--- a/mot-web-frontend/module/MotTestModule/view/defects/search.twig
+++ b/mot-web-frontend/module/MotTestModule/view/defects/search.twig
@@ -94,16 +94,11 @@
                                 PRS
                             </a>
                         </li>
-                        <li>
-                            <a href="{{ defectJourneyUrl().toAddDefect(defect.defectId, 'failure') }}" class="button--alert">
-                                Failure
-                            </a>
-                        </li>
                     {% endif %}
-                    {% if defect.isFailure %}
+                    {% if (defect.isFailure or defect.isPrs) %}
                         <li>
                             <a href="{{ defectJourneyUrl().toAddDefect(defect.defectId, 'failure') }}" class="button--alert">
-                                Failure
+                                {{ defect.getLabelForRfr }}
                             </a>
                         </li>
                     {% endif %}
