BL-6406 track amount of RFR search results.

--- a/mot-web-frontend/module/PersonModule/view/test-quality-information/view.phtml
+++ b/mot-web-frontend/module/PersonModule/view/test-quality-information/view.phtml
@@ -13,7 +13,7 @@ use Dvsa\Mot\Frontend\PersonModule\ViewModel\TestQualityInformation\TestQualityI
 
 <?php
 echo $this->partial('site/site/test-quality-information/month-range-form', [
-    'form' => $viewModel->getMonthRangeForm(),
+    'form' => $viewModel->getMonthRangeForm()
 ]);
 ?>
 
