--- a/mot-web-frontend/module/Site/view/site/site/test-quality.phtml
+++ b/mot-web-frontend/module/Site/view/site/site/test-quality.phtml
@@ -16,7 +16,7 @@ $returnLink = $viewModel->getReturnLink();
 <?php
 
 echo $this->partial('site/site/test-quality-information/month-range-form', [
-    'form' => $viewModel->getMonthRangeForm(),
+    'form' => $viewModel->getMonthRangeForm()
 ]);
 
 if ($viewModel->canGroupSectionBeViewed(VehicleClassGroupCode::BIKES)) {
