--- a/mot-web-frontend/module/Site/view/site/site/user-test-quality.phtml
+++ b/mot-web-frontend/module/Site/view/site/site/user-test-quality.phtml
@@ -12,7 +12,7 @@ $vm = $this->viewModel;
 
 <?php
 echo $this->partial('site/site/test-quality-information/month-range-form', [
-    'form' => $vm->getMonthRangeForm(),
+    'form' => $vm->getMonthRangeForm()
 ]);
 
 echo $this->partial('site/site/partials/test-quality-group-breakdown', [
