BL-5019: Ensure that the primary phone number is the phone number returned, if one exists. If a non-primary phone number exists and no primary phone number exists, then then the non-primary phone number will be returned. This is achieved by ordering the phone records by the is_primary indicator and using the first result, rather than applying no ordering and picking the first record.

--- a/mot-web-frontend/module/Application/view/dvsa-mot-test/mot-test/replacement-certificate-summary.phtml
+++ b/mot-web-frontend/module/Application/view/dvsa-mot-test/mot-test/replacement-certificate-summary.phtml
@@ -54,6 +54,7 @@ if ($motTest instanceof MotTest) :
             'vehicle' => $vehicleViewModel,
             'odometerReading' => $odometerReading,
             'expiryDate' => $expiryDate,
+            'motVTSDraft' => $this->motVTSDraft,
         ]
     );
     ?>
