BL-6196 - can't use current date presently to end date old RFRs as it appears to break a selenium test that must be depending on old component tree structure.

--- a/mot-web-frontend/module/Event/view/event/event/index.phtml
+++ b/mot-web-frontend/module/Event/view/event/event/index.phtml
@@ -132,6 +132,7 @@ $goBackLink = $viewModel->getGoBackLink();
                             'id' => 'search',
                             'class' => 'form-control',
                             'value' => $search,
+                            'maxLength' => '50'
                         ]
                     );
                     ?>
