--- a/mot-web-frontend/module/Core/view/partial/gds/form/control-radio-meta.phtml
+++ b/mot-web-frontend/module/Core/view/partial/gds/form/control-radio-meta.phtml
@@ -1,16 +1,22 @@
-<fieldset>
-    <label class="block-label"
-        <?php echo (isset($ariaContainer)) ? ' data-target="'.$this->escapeHtmlAttr($ariaContainer).'"' : '' ?>
+<div class="multiple-choice"
+    <?php  if(isset($ariaContainer)) : ?>
+        data-target="<?php echo $this->escapeHtmlAttr($ariaContainer); ?>"
+    <?php endif; ?>
+>
+
+    <input type="radio"
+        value="<?php echo $this->escapeHtmlAttr($value); ?>"
+        name="<?php echo $this->escapeHtmlAttr($name); ?>"
+        id="<?php echo $this->escapeHtmlAttr($id); ?>"
+        <?php echo (isset($ariaContainer)) ? ' aria-controls="'.$this->escapeHtmlAttr($ariaContainer).'"' : '' ?>
+        <?php echo ($this->checked === strval($value)) ? ' checked="checked"' : '' ?> />
+
+    <label class="<?php echo isset($labelClass) ? ' ' . $labelClass : '';?>"
            for="<?php echo $this->escapeHtmlAttr($id); ?>">
-        <input type="radio"
-               value="<?php echo $this->escapeHtmlAttr($value); ?>"
-               name="<?php echo $this->escapeHtmlAttr($name); ?>"
-               id="<?php echo $this->escapeHtmlAttr($id); ?>"
-               <?php echo (isset($ariaContainer)) ? ' aria-controls="'.$this->escapeHtmlAttr($ariaContainer).'"' : '' ?>
-            <?php echo ($this->checked === strval($value)) ? ' checked="checked"' : '' ?>/>
-        <strong><?php echo $this->escapeHtmlAttr($title); ?></strong>
+        <?php echo $this->escapeHtmlAttr($title); ?>
         <?php if (isset($meta)) : ?>
             <span class="block-label__meta"><?php echo $this->escapeHtmlAttr($meta); ?></span>
         <?php endif; ?>
     </label>
-</fieldset>
+
+</div>
